# coursera_utils

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  sample.env  spec.md  tox.ini  transcribe_video.py  transcript_combiner.py
agents/guides/: engineering-guide.md  patterns-and-architecture.md  styleguides.md  workflow.md
agents/tasks/bug/0001-cli-consolidation-regressions/: implementation.md  spec.md
agents/tasks/feat/0001-generate-document/: spec.md
agents/tasks/feat/0002-markdown-to-pdf/: spec.md
agents/tasks/feat/0003-quizzer/: spec.md
agents/tasks/feat/0004-text-combiner/: spec.md
agents/tasks/feat/0005-study-cli/: implementation-plan.md  spec.md
app/: generate_document.py  markdown_to_pdf.py  quizzer.py  text_combiner.py  transcribe_video.py
app/quizzer/: __init__.py  __main__.py  utils.py
app/quizzer/manager/: quiz.py
app/quizzer/view/: quiz.py
spec/: generate_document.md  markdown_to_pdf.md  quizzer.md  text_combiner.md
spec/quizzer_plan/: quizzer_p20250901.md
src/study_utils/: cli.py  documents.toml  generate_document.py  markdown_to_pdf.py  text_combiner.py  transcribe_video.py
src/study_utils/convert_markdown/: __init__.py  cli.py  config.py  converter.py  executor.py  output.py  template.toml
src/study_utils/core/: __init__.py  ai.py  config.py  config_templates.py  files.py  logging.py  workspace.py
src/study_utils/generate_document/: __init__.py  cli.py  config.py  runner.py
src/study_utils/quizzer/: __init__.py  __main__.py  _main.py  session.py  utils.py
src/study_utils/rag/: __init__.py  chat.py  cli.py  config.py  data_dir.py  doctor.py  ingest.py  session.py  vector_store.py
src/study_utils/resources/: print.css
src/study_utils/workspace/: __init__.py  cli.py
tests/: conftest.py  test_cache.py  test_cli.py  test_core_ai.py  test_core_files.py  test_discovery.py  test_generate_document.py  test_markdown_to_pdf.py  test_prefix.py  test_quiz_session_ui.py  test_quizzer.py  test_quizzer_manager_extra.py  test_quizzer_questions.py  test_quizzer_session.py  test_quizzer_topics_ai.py  test_quizzer_utils_cli.py  test_quizzer_view_extra.py  test_smart_names_list.py  test_text_combiner.py  test_text_combiner_extra.py  test_transcribe_video_extra.py
tests/convert_markdown/: test_convert_cli.py  test_convert_config.py  test_convert_executor.py  test_convert_output.py  test_convert_pipeline.py
tests/core/: test_config_templates.py  test_logging.py  test_workspace.py
tests/fixtures/: __init__.py  dotenv.py  openai.py  pydub.py  weasyprint.py  workspace.py
tests/rag/: test_chat.py  test_config.py  test_data_dir.py  test_doctor.py  test_ingest.py  test_rag_cli.py  test_session.py  test_vector_store.py
tests/workspace/: test_workspace_cli.py
(+14 files in other folders)
